
Slick 7.x-2.0-dev, 2015-6-5
---------------------------
- Fixed for interrupted update process, when the process is reversed:
  running /update.php prior to clearing cache.
  The safe recommended process: clearing cache/registry -> /update.php.
  Temporarily put back the slick_optionset_ui.inc to avoid the issue till we
  figure out better process.

Slick 7.x-2.0-dev, 2015-6-4
---------------------------
- Reached the cleanup threshold of below 500 lines of the main module file.
- Removed _slick_optionset_defaults() in favor of slick_get_options(). One more
  function down, one more function down! Call 119, er 911.

Slick 7.x-2.0-dev, 2015-6-1
---------------------------
- Fixed slick_clean_options_info_alter() param.
- Fixed Field collection background image style when it is core image, not media
  file image type.
- Fixed typo at slick.api.php, and added a hook_slick_attach_load_info_alter().
- Moved slick_inline_css_skins() to slick_fields_inline_css_skins(), since it is
  only specific to fields, not views.
- Revived the "slick" class when it is "unslick" (a slideshow with a single
  slide/image -- i.e. when a content editor can not meet design specs), to get
  consistent CSS global styling. JS filters out the unslick instead.
- Moved specific backend-related functions to slick.admin.inc:
  o slick_get_responsive_options()
  o slick_clean_options()
  o slick_get_overridable_options()
- Moved specific theme-related functions to slick.theme.inc.

- #2497945 by gausarts: Move type juggling to backend only
  A slick_update_7007() is provided, but not effective for stored codes.

  Please re-save and re-export optionsets if you are a pre-alpha user who stored
  optionsets in codes before alpha release on 2015-3-31, or precisely before
  2015-3-2 commit: http://cgit.drupalcode.org/slick/commit/?id=f08c3b4

  Please ignore if you:
  o are a (pre-)alpha user who stored optionsets in codes after alpha.
  o never stored/exported optionsets in codes.
