@@ -1,4 +1,8 @@
 
+Slick 7.x-2.0-dev, 2015-6-6
+---------------------------
+- Cleaned up a few doc and wasted lines.
+
 Slick 7.x-2.0-dev, 2015-6-5
 ---------------------------
 - Fixed for interrupted update process, when the process is reversed:
